Installed cross-env, webpack-dev-server. Created header, src/assets, pages/. webpack.config.js scripts in package.json  was adjusted.

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,20 +1,22 @@
 header.header
   .container
     .menu
-      ul.menu__list
-        li.menu___item
+      ul.menu__list_left
+        li.menu__item
+          img(src='../assets/images/Logo.jpg')
+        li.menu__item
           a.menu__link(href="") О нас
-        li.menu___item
+        li.menu__item
           a.menu__link(href="") Услуги
-        li.menu___item
+        li.menu__item
           a.menu__link(href="") Вакансии
-        li.menu___item
+        li.menu__item
           a.menu__link(href="") Новости
-        li.menu___item
+        li.menu__item
           a.menu__link(href="") Соглашения
 
-        ul.menu__list
-        li.menu___item
-          a.menu__link.menu_btn(href="") Кнопка войти
-        li.menu___item
-          a.menu__link.menu_btn(href="") Кнопка зарегистрироваться
+      ul.menu__list_right
+        li.menu__item
+          a.menu__link.menu_btn_1(href="") ВОЙТИ
+        li.menu__item
+          a.menu__link.menu_btn_2(href="") ЗАРЕГИСТРИРОВАТЬСЯ
