--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,16 @@
   font-style: normal;
 }
 
+body {
+  font-family: Montserrat-Regular;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+a {
+  text-decoration: none;
+}
+
 li {
   list-style: none;
 }
