--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,7 +1,55 @@
-.menu {
-  display: flex;
+.header {
+  height: 70px;
+  align-items: center;
 }
 
 .container {
+  margin: 0 auto;
   width: 1160px;
+}
+
+.menu {
+  display: flex;
+
+  &__list_left {
+    display: flex;
+  }
+
+  &__list_right {
+    display: flex;
+  }
+
+  &__link {
+    color: $darkShade50;
+    // hover не должен применяться к кнопкам
+    // &:hover {
+    //   color: $darkShade75;
+    //   font-weight: bold;
+    // }
+  }
+
+  &__item {
+    margin-right: 20px;
+  }
+
+  // Потом сделать градиент для border.
+  &_btn_1 {
+    border: 2px solid;
+    border-radius: 22px;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    padding: 7px 20px 8px 19px;
+    color: #bc9cff;
+  }
+
+  &_btn_2 {
+    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    border-radius: 22px;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    padding: 9px 20px 10px 19px;
+    color: white;
+  }
 }
