--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,6 @@ html(lang='en')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
   body
-    include ./components/header
+    include ./pages/colors-type
+    include ./pages/form-elements
+    include ./pages/header-footer
