Created uncompleted header. Added font Quicksand. Created styles/text.scss. Color.scss was moved to /styles

--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,9 +1,9 @@
 header.header
   .container
+    img(src='./assets/images/Logo.jpg').header__logo
+    
     .menu
       ul.menu__list_left
-        li.menu__item
-          img(src='../assets/images/Logo.jpg')
         li.menu__item
           a.menu__link(href="") О нас
         li.menu__item
