--- a/src/style.scss
+++ b/src/style.scss
@@ -1,19 +1,32 @@
-@import "./color.scss";
+@import "./assets/styles/color.scss";
+@import "./assets/styles/text.scss";
 @import "./components/header.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
-  src: url("./fonts/Montserrat-Regular.ttf") format("ttf"),
-    url("./fonts/Montserrat-Regular.woff") format("woff");
+  src: url("./assets/fonts/Montserrat-Regular.ttf") format("ttf"),
+    url("./assets/fonts/Montserrat-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Quicksand-Regular";
+  src: url("./assets/fonts/Quicksand-Regular.ttf") format("ttf"),
+    url("./assets/fonts/Quicksand-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
-body {
-  font-family: Montserrat-Regular;
-  font-size: 14px;
-  line-height: 24px;
+* {
+  margin: 0;
+  padding: 0;
 }
+
+// body {
+//   font-family: Montserrat-Regular;
+//   font-size: 14px;
+//   line-height: 24px;
+// }
 
 a {
   text-decoration: none;
