New file structure. Created form elements text-field, masked-text-field (in work)

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,6 @@ html(lang='en')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
   body
-    include ./pages/colors-type
-    include ./pages/form-elements
-    include ./pages/header-footer
+    //- include ./blocks/components/header.pug
+    //- include ./blocks/form-elements/text-field
+    include ./blocks/form-elements/masked-text-field
