Checkbox added. New image Box. New element Masked text field. jQuery added.

--- a/src/index.pug
+++ b/src/index.pug
@@ -3,8 +3,13 @@ html(lang='en')
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+    //- Разобраться с подключением 
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js")
+
 
   body
     //- include ./blocks/components/header.pug
     //- include ./blocks/form-elements/text-field
-    include ./blocks/form-elements/masked-text-field
+    //- include ./blocks/form-elements/masked-text-field
+    include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
