--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "./common-styles/text.scss";
 @import "./blocks/components/header.scss";
 @import "./blocks/form-elements/text-field.scss";
+@import "./blocks/form-elements/checkbox-buttons/checkbox-buttons.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
