Adjusted checkbox-buttons/checkbox-items. Added font Montserrat-Bold.

--- a/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
@@ -1,5 +1,10 @@
-label.label
-  input.checkbox(
-    type='checkbox'
-  )
-  span.box
+h3.title CHECKBOX BUTTONS
+.checkbox-line
+  include checkbox-item
+  span.checkbox-text Можно курить
+.checkbox-line
+  include checkbox-item
+  span.checkbox-text Можно с питомцами
+.checkbox-line
+  include checkbox-item
+  span.checkbox-text Можно пригласить гостей (до 10 человек)
