--- a/src/index.pug
+++ b/src/index.pug
@@ -13,3 +13,4 @@ html(lang='en')
     //- include ./blocks/form-elements/text-field
     //- include ./blocks/form-elements/masked-text-field
     include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
+    //- include ./blocks/form-elements/checkbox-buttons/checkbox-item
