--- a/src/common-styles/text.scss
+++ b/src/common-styles/text.scss
@@ -1,7 +1,7 @@
 body {
   font-family: Montserrat-Regular;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 20px;
 }
 
 h1 {
@@ -19,7 +19,7 @@ h2 {
 }
 
 h3 {
-  font-family: Montserrat-Regular;
+  font-family: Montserrat-Bold;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
