--- a/src/index.pug
+++ b/src/index.pug
@@ -12,5 +12,6 @@ html(lang='en')
     //- include ./blocks/components/header.pug
     //- include ./blocks/form-elements/text-field
     //- include ./blocks/form-elements/masked-text-field
-    include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
+    //- include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
     //- include ./blocks/form-elements/checkbox-buttons/checkbox-item
+    include ./blocks/form-elements/radio-buttons/radio-buttons
