--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import "./blocks/form-elements/text-field.scss";
 @import "./blocks/form-elements/checkbox-buttons/checkbox-item.scss";
 @import "./blocks/form-elements/checkbox-buttons/checkbox-buttons.scss";
+@import "./blocks/form-elements/radio-buttons/radio-buttons.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
@@ -49,23 +50,23 @@ li {
 //   font-family: "Montserrat-Regular";
 // }
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
+// *,
+// *::before,
+// *::after {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: inherit;
+// }
 
-html {
-  font-size: 62.5%;
-}
+// html {
+//   font-size: 62.5%;
+// }
 
-body {
-  box-sizing: border-box;
-}
+// body {
+//   box-sizing: border-box;
+// }
 
-span {
-  margin: 0;
-  padding: 0;
-}
+// span {
+//   margin: 0;
+//   padding: 0;
+// }
