--- a/src/index.pug
+++ b/src/index.pug
@@ -14,4 +14,5 @@ html(lang='en')
     //- include ./blocks/form-elements/masked-text-field
     //- include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
     //- include ./blocks/form-elements/checkbox-buttons/checkbox-item
-    include ./blocks/form-elements/radio-buttons/radio-buttons
+    //- include ./blocks/form-elements/radio-buttons/radio-buttons
+    include ./blocks/form-elements/toggle/toggle
