--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import "./blocks/form-elements/checkbox-buttons/checkbox-item.scss";
 @import "./blocks/form-elements/checkbox-buttons/checkbox-buttons.scss";
 @import "./blocks/form-elements/radio-buttons/radio-buttons.scss";
+@import "./blocks/form-elements/toggle/toggle.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
