--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,8 @@ html(lang='en')
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     //- Разобраться с подключением 
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js")
-
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet")
 
   body
     //- include ./blocks/components/header.pug
@@ -15,4 +16,6 @@ html(lang='en')
     //- include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
     //- include ./blocks/form-elements/checkbox-buttons/checkbox-item
     //- include ./blocks/form-elements/radio-buttons/radio-buttons
-    include ./blocks/form-elements/toggle/toggle
+    //- include ./blocks/form-elements/radio-buttons/radio-button
+    //- include ./blocks/form-elements/toggle/toggle
+    include ./blocks/form-elements/like-button/like-button
