--- a/src/blocks/form-elements/toggle/toggle.scss
+++ b/src/blocks/form-elements/toggle/toggle.scss
@@ -5,15 +5,16 @@
   &__input {
     display: none;
 
-    &:hover ~ .toggle__switch::after {
-      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-    }
-    &:checked ~ .toggle__switch::after {
-      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-      left: 23px;
-    }
     &:checked ~ .toggle__switch {
       border-color: $purple;
+    }
+    &:checked ~ .toggle__switch::before {
+      left: 23px;
+      opacity: 0;
+    }
+    &:checked ~ .toggle__switch::after {
+      left: 23px;
+      opacity: 1;
     }
   }
 
@@ -24,12 +25,12 @@
     box-sizing: border-box;
     border: 1px solid $darkShade25;
     border-radius: 10px;
+
     &:hover {
       border-color: $purple;
     }
-    &::after {
+    &::before {
       content: "";
-      // display: inline-block;
       position: absolute;
       top: 3px;
       left: 3px;
@@ -38,11 +39,26 @@
       height: 12px;
       background: $darkShade25;
       border-radius: 50%;
+      transition: all linear 0.2s;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      display: block;
+      width: 12px;
+      height: 12px;
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      border-radius: 50%;
+      transition: all linear 0.2s;
+      opacity: 0;
     }
   }
 
   &__text {
     padding-left: 10px;
     color: $darkShade75;
+    user-select: none;
   }
 }
