Created rate button. Adjusted radio-button (hover on text paints btn-border).

--- a/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
@@ -1,5 +1,5 @@
 h3.title CHECKBOX BUTTONS
-.checkbox-line
+lable.checkbox-line
   include checkbox-item
   span.checkbox-text Можно курить
 .checkbox-line
