--- a/src/blocks/form-elements/checkbox-buttons/checkbox-item.pug
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-item.pug
@@ -4,4 +4,4 @@ label.checkbox
   )
   span.checkbox__box
 
-//- Наверное, придется переделать так, чтобы строка с текстом была в этом блоке чекбокса и каждый раз подставлялся нужный текст (миксины?)
+//- Переделать в миксины. Сделать так, что при щелчке по надпили чекбокс тоже.
