--- a/src/index.pug
+++ b/src/index.pug
@@ -18,4 +18,6 @@ html(lang='en')
     //- include ./blocks/form-elements/radio-buttons/radio-buttons
     //- include ./blocks/form-elements/radio-buttons/radio-button
     //- include ./blocks/form-elements/toggle/toggle
-    include ./blocks/form-elements/like-button/like-button
+    //- include ./blocks/form-elements/like-button/like-button
+    //- include ./blocks/form-elements/rate-button/rate-button-mixin
+    include ./blocks/form-elements/rate-button/rate-button
