--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import "./blocks/form-elements/radio-buttons/radio-buttons.scss";
 @import "./blocks/form-elements/toggle/toggle.scss";
 @import "./blocks/form-elements/like-button/like-button.scss";
+@import "./blocks/form-elements/rate-button/rate-button.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
