--- a/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-buttons.pug
@@ -1,10 +1,10 @@
 h3.title CHECKBOX BUTTONS
-lable.checkbox-line
+label.checkbox-line
   include checkbox-item
   span.checkbox-text Можно курить
-.checkbox-line
+label.checkbox-line
   include checkbox-item
   span.checkbox-text Можно с питомцами
-.checkbox-line
+label.checkbox-line
   include checkbox-item
   span.checkbox-text Можно пригласить гостей (до 10 человек)
