--- a/src/index.pug
+++ b/src/index.pug
@@ -10,14 +10,15 @@ html(lang='en')
       rel="stylesheet")
 
   body
-    //- include ./blocks/components/header.pug
-    //- include ./blocks/form-elements/text-field
-    //- include ./blocks/form-elements/masked-text-field
-    //- include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
-    //- include ./blocks/form-elements/checkbox-buttons/checkbox-item
-    //- include ./blocks/form-elements/radio-buttons/radio-buttons
-    //- include ./blocks/form-elements/radio-buttons/radio-button
-    //- include ./blocks/form-elements/toggle/toggle
-    //- include ./blocks/form-elements/like-button/like-button
-    //- include ./blocks/form-elements/rate-button/rate-button-mixin
+    include ./blocks/components/header.pug
+    include ./blocks/form-elements/text-field/text-field
+    include ./blocks/form-elements/masked-text-field/masked-text-field
+    include ./blocks/form-elements/checkbox-buttons/checkbox-buttons
+    include ./blocks/form-elements/checkbox-buttons/checkbox-item
+    include ./blocks/form-elements/radio-buttons/radio-buttons
+    include ./blocks/form-elements/radio-buttons/radio-button
+    include ./blocks/form-elements/toggle/toggle
+    include ./blocks/form-elements/like-button/like-button
+    include ./blocks/form-elements/rate-button/rate-button-mixin
     include ./blocks/form-elements/rate-button/rate-button
+    include ./blocks/form-elements/dropdown/dropdown
