--- a/src/blocks/form-elements/text-field/text-field.scss
+++ b/src/blocks/form-elements/text-field/text-field.scss
@@ -1,4 +1,4 @@
-.input {
+.text-field {
   width: 320px;
   height: 44px;
   box-sizing: border-box;
@@ -9,16 +9,17 @@
   font-size: 14px;
   line-height: 18px;
   padding-left: 14px;
-}
 
-.input::placeholder {
-  color: $darkShade25;
-}
+  &::placeholder {
+    color: $darkShade25;
+  }
 
-.input:focus,
-.input:hover {
-  // Что такое outline?
-  outline: none;
-  border: 1px solid $darkShade50;
-  color: $darkShade75;
+  &:focus,
+  &:hover {
+    // Что такое outline?
+    outline: none;
+    border: 1px solid $darkShade50;
+    color: $darkShade75;
+    transition: 0.2s;
+  }
 }
