--- a/src/blocks/form-elements/dropdown/dropdown.scss
+++ b/src/blocks/form-elements/dropdown/dropdown.scss
@@ -1,25 +1,36 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  user-select: none;
+  // временный параметр
   margin: 30px;
 
   &__btn {
-    display: flex;
     align-items: center;
+    position: relative;
+    width: 320px;
+    height: 44px;
+    box-sizing: border-box;
+    border: 1px solid $darkShade25;
+    border-radius: 4px;
+    color: $darkShade75;
+    padding-left: 14px;
+
     &:hover {
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    &:hover ~ .dropdown__content {
-      display: block;
+      border-color: $darkShade50;
       transition: 0.2s;
     }
+  }
+
+  &__btn.active-dropdown {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-color: $darkShade50;
   }
 
   &__expand-symbol {
     font-family: "Material Icons";
     font-size: 24px;
-    line-height: 24px;
     color: $darkShade50;
     right: 10px;
     position: absolute;
@@ -27,65 +38,77 @@
 
   &__content {
     display: none;
+    // display: block;
     position: absolute;
+    width: 100%;
     border: 1px solid $darkShade50;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     border-top: 0;
-    color: $darkShade25;
+    background-color: white;
+    // возможно он лишний
     z-index: 1;
-    // box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: Montserrat-Bold;
+    font-size: 12px;
+  }
+
+  &__content.active-dropdown {
+    display: block;
   }
 
   &__content-item {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 7px 7px 0 14px;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: Montserrat-Bold;
+    width: 100%;
+    padding: 7px 7px 0 14px;
+    box-sizing: border-box;
   }
 
-  &__content-left {
+  &__content-counter {
     width: 92px;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
+  &__content-counter-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid $darkShade25;
+    color: $darkShade25;
+    box-sizing: border-box;
+    border-radius: 50%;
+    font-family: Montserrat-Regular;
+    font-size: 18px;
+
+    &_plus {
+      border-color: $darkShade50;
+      color: $darkShade50;
+    }
+  }
+
   &__bottom-item {
-    padding: 19px 7px 13px 14px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 19px 7px 13px 14px;
+
+    &-clear {
+      color: $darkShade50;
+    }
+
+    &-apply {
+      color: $purple;
+    }
   }
 }
 
-.drop-content-round-btn {
-  width: 30px;
-  height: 30px;
-  border: 1px solid $darkShade25;
-  color: $darkShade25;
-  box-sizing: border-box;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Montserrat-Regular;
-  font-size: 18px;
-}
-
-.round-btn-plus {
-  border-color: $darkShade50;
-  color: $darkShade50;
-}
-
-.drop-bottom-clear {
-  color: $darkShade50;
-  // opacity: 0;
-}
-
-.drop-bottom-apply {
-  color: $purple;
+.red {
+  background-color: yellowgreen;
+  height: 500px;
 }
