--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js")
     //- Разобраться с подключением 
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons"
