Adjust dropdown (jQuery counter)

--- a/src/blocks/form-elements/dropdown/dropdown.pug
+++ b/src/blocks/form-elements/dropdown/dropdown.pug
@@ -5,21 +5,21 @@
     .dropdown__content-item
       span ВЗРОСЛЫЕ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn -
+        span.dropdown__content-counter-btn_minus -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn_plus +
     .dropdown__content-item
       span ДЕТИ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn -
+        span.dropdown__content-counter-btn_minus -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn_plus +
     .dropdown__content-item
       span МЛАДЕНЦЫ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn -
+        span.dropdown__content-counter-btn_minus -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn_plus +
     .dropdown__bottom-item
       span.dropdown__bottom-item-clear ОТЧИСТИТЬ
       span.dropdown__bottom-item-apply ПРИМЕНИТЬ
