--- a/src/blocks/form-elements/dropdown/dropdown.pug
+++ b/src/blocks/form-elements/dropdown/dropdown.pug
@@ -1,5 +1,6 @@
 .dropdown
-  .dropdown__btn Сколько гостей
+  .dropdown__btn
+    span.dropdown__placeholder 
     span.dropdown__expand-symbol expand_more
   .dropdown__content
     .dropdown__content-item
