--- a/src/blocks/sections/section-1.pug
+++ b/src/blocks/sections/section-1.pug
@@ -1,13 +1,13 @@
 .section.section_1
-  .form-element_1
+  .form-element
     .form-element__title
       h3 text field
     include ../form-elements/text-field/text-field
-  .form-element_1
+  .form-element
     .form-element__title
       h3 dropdown
     include ../form-elements/dropdown/dropdown
-  .form-element_1
+  .form-element
     .form-element__title
       h3 masked text field
     include ../form-elements/masked-text-field/masked-text-field
