--- a/src/blocks/sections/section-2.pug
+++ b/src/blocks/sections/section-2.pug
@@ -1,22 +1,22 @@
 .section
-  .form-element.form-element_2
+  .form-element_2
     .form-element__title_2
       h3 checkbox buttons
     include ../form-elements/checkbox-buttons/checkbox-buttons
-  .form-element.form-element_2
+  .form-element_2
     .form-element__title_2
       h3 radio buttons
     include ../form-elements/radio-buttons/radio-buttons
     include ../form-elements/radio-buttons/radio-button
-  .form-element.form-element_2
+  .form-element_2
     .form-element__title_2
       h3 toggle
     include ../form-elements/toggle/toggle
-  .form-element.form-element_2
+  .form-element_2
     .form-element__title_2
       h3 like button
     include ../form-elements/like-button/like-button
-  .form-element.form-element_2
+  .form-element_2
     .form-element__title_2
       h3 rate button
     include ../form-elements/rate-button/rate-button-mixin
