--- a/src/blocks/form-elements/checkbox-buttons/checkbox-item.scss
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-item.scss
@@ -1,6 +1,10 @@
 .checkbox {
-  display: flex;
-  align-items: top;
+  display: inline-flex;
+  cursor: pointer;
+  margin-bottom: 10px;
+  &:hover input ~ .checkbox__box {
+    border-color: $purple;
+  }
 
   &__input {
     display: none;
@@ -13,15 +17,17 @@
   }
 
   &__box {
-    display: inline-block;
-    box-sizing: border-box;
     min-width: 20px;
     width: 20px;
     height: 20px;
     border: 1px solid $darkShade25;
     border-radius: 4px;
-    &:hover {
-      border-color: $purple;
-    }
+  }
+
+  &__text {
+    padding-top: 1px;
+    color: $darkShade50;
+    margin-left: 10px;
+    user-select: none;
   }
 }
