--- a/src/blocks/sections/section.scss
+++ b/src/blocks/sections/section.scss
@@ -1,6 +1,7 @@
 .section {
   position: relative;
   max-width: 330px;
+  height: 100%;
   box-sizing: border-box;
   display: flex;
   flex-flow: row wrap;
@@ -9,11 +10,20 @@
   }
 }
 
-.form-element_1 {
+.form-element {
+  position: relative;
   display: block;
   padding-bottom: 20px;
+  &_2 {
+    position: relative;
+    display: block;
+    padding-bottom: 40px;
+  }
 }
 
 .form-element__title {
   padding-bottom: 5px;
+  &_2 {
+    padding-bottom: 16px;
+  }
 }
