--- a/src/blocks/form-elements/toggle/toggle.scss
+++ b/src/blocks/form-elements/toggle/toggle.scss
@@ -33,6 +33,7 @@
     box-sizing: border-box;
     border: 1px solid $darkShade25;
     border-radius: 10px;
+    transition: border-color 0.2s;
 
     &:hover {
       border-color: $purple;
@@ -68,5 +69,6 @@
     padding-left: 10px;
     color: $darkShade50;
     user-select: none;
+    transition: color 0.2s;
   }
 }
