--- a/src/blocks/form-elements/checkbox-buttons/checkbox-item.scss
+++ b/src/blocks/form-elements/checkbox-buttons/checkbox-item.scss
@@ -22,6 +22,7 @@
     height: 20px;
     border: 1px solid $darkShade25;
     border-radius: 4px;
+    transition: border-color 0.2s;
   }
 
   &__text {
