--- a/src/blocks/form-elements/dropdown/dropdown.scss
+++ b/src/blocks/form-elements/dropdown/dropdown.scss
@@ -13,11 +13,11 @@
     border-radius: 4px;
     color: $darkShade75;
     padding-left: 14px;
+    transition: border-color 0.2s;
     cursor: pointer;
 
     &:hover {
       border-color: $darkShade50;
-      transition: 0.2s;
     }
   }
 
