--- a/src/blocks/form-elements/like-button/like-button.scss
+++ b/src/blocks/form-elements/like-button/like-button.scss
@@ -9,9 +9,15 @@
     width: 40px;
     height: 20px;
     border: 1px solid $darkShade25;
+    transition: border-color 0.2s;
     box-sizing: border-box;
     border-radius: 10px;
     font-size: 10px;
+    cursor: pointer;
+
+    &:hover {
+      border-color: $purple;
+    }
   }
 
   &__input {
