--- a/src/blocks/form-elements/text-field/text-field.scss
+++ b/src/blocks/form-elements/text-field/text-field.scss
@@ -10,6 +10,7 @@
   font-size: 14px;
   line-height: 18px;
   padding-left: 14px;
+  transition: border-color 0.2s;
 
   &::placeholder {
     color: $darkShade25;
@@ -21,6 +22,5 @@
     outline: none;
     border: 1px solid $darkShade50;
     color: $darkShade75;
-    transition: 0.2s;
   }
 }
