--- a/src/blocks/sections/section.scss
+++ b/src/blocks/sections/section.scss
@@ -1,10 +1,9 @@
 .section {
   position: relative;
-  max-width: 330px;
+  width: 330px;
   height: 100%;
   box-sizing: border-box;
-  display: flex;
-  flex-flow: row wrap;
+  display: block;
   &_1 {
     margin-right: 126px;
   }
