--- a/src/blocks/form-elements/radio-buttons/radio-buttons.pug
+++ b/src/blocks/form-elements/radio-buttons/radio-buttons.pug
@@ -1,5 +1,5 @@
 include ./radio-button
 
-div
+.radio-container
   +radio-btn({'label-id': 'radio-first', name: 'name', text: 'Мужчина'})
   +radio-btn({name: 'name', text: 'Женщина'})
