--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html(lang='en')
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet")
 
-  body#transition-disabled
-    .page
-      include ./blocks/sections/section-1
-      include ./blocks/sections/section-2
+  //- Разобраться с .transition-disabled
+  //- body.transition-disabled
+  body
+    include ./blocks/pages/page
