--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
 @import "./common-styles/color.scss";
 @import "./common-styles/text.scss";
-// @import "./blocks/components/header.scss";
+@import "./blocks/pages/page.scss";
 @import "./blocks/form-elements/text-field/text-field.scss";
 @import "./blocks/form-elements/checkbox-buttons/checkbox-item.scss";
 @import "./blocks/form-elements/checkbox-buttons/checkbox-buttons.scss";
@@ -60,22 +60,16 @@ li {
 }
 
 // Отключение transition при загрузке страницы.
-#transition-disabled {
-  transition: none !important;
-  -webkit-transition: none !important;
-  -moz-transition: none !important;
-  -ms-transition: none !important;
-  -o-transition: none !important;
-}
+// .transition-disabled {
+//   transition: none !important;
+//   -webkit-transition: none !important;
+//   -moz-transition: none !important;
+//   -ms-transition: none !important;
+//   -o-transition: none !important;
+// }
 
 // Задание стилей.
 body {
   max-width: 1440px;
   margin: auto;
-}
-
-.page {
-  position: relative;
-  display: flex;
-  padding: 140px;
 }
