--- a/src/blocks/form-elements/dropdown/dropdown.pug
+++ b/src/blocks/form-elements/dropdown/dropdown.pug
@@ -1,26 +1,26 @@
 .dropdown
   .dropdown__btn
-    span.dropdown__placeholder 
+    span.dropdown__placeholder  
     span.dropdown__expand-symbol expand_more
   .dropdown__content
     .dropdown__content-item
       span ВЗРОСЛЫЕ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn_minus -
+        span.dropdown__content-counter-btn(data-direction="minus") -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn(data-direction="plus") +
     .dropdown__content-item
       span ДЕТИ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn_minus -
+        span.dropdown__content-counter-btn(data-direction="minus") -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn(data-direction="plus") +
     .dropdown__content-item
       span МЛАДЕНЦЫ
       .dropdown__content-counter
-        span.dropdown__content-counter-btn_minus -
+        span.dropdown__content-counter-btn(data-direction="minus") -
         span.dropdown__content-counter-value 0
-        span.dropdown__content-counter-btn_plus +
+        span.dropdown__content-counter-btn(data-direction="plus") +
     .dropdown__bottom-item
       span.dropdown__bottom-item-clear ОТЧИСТИТЬ
       span.dropdown__bottom-item-apply ПРИМЕНИТЬ
