--- a/src/blocks/sections/section-1.pug
+++ b/src/blocks/sections/section-1.pug
@@ -11,3 +11,5 @@
     .form-element__title
       h3 masked text field
     include ../form-elements/masked-text-field/masked-text-field
+  .form-element
+    include ../form-elements/range-slider/range-slider
