--- a/src/common-styles/text.scss
+++ b/src/common-styles/text.scss
@@ -18,7 +18,8 @@ h2 {
   line-height: 24px;
 }
 
-h3 {
+h3,
+.text-style-litle {
   font-family: Montserrat-Bold;
   font-weight: bold;
   font-size: 12px;
