--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,7 @@
 @import "./blocks/form-elements/rate-button/rate-button.scss";
 @import "./blocks/form-elements/dropdown/dropdown.scss";
 @import "./blocks/sections/section.scss";
+@import "./blocks/form-elements/range-slider/range-slider.scss";
 
 @font-face {
   font-family: "Montserrat-Regular";
